force-app/main/default/objects/Sailor__c/Sailor__c.object-meta.xml
<CustomObject>
    <label>Sailor</label>
    <nameField>
        <label>Full Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sailors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>