force-app/main/default/objects/Sailor__c/fields/Command_Name__c.field-meta.xml
<CustomField>
    <fullName>Command_Name__c</fullName>
    <defaultValue>&quot;CVN-71&quot;</defaultValue>
    <label>Command Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>