force-app/main/default/objects/Sailor__c/fields/Favorite_Color__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Color__c</fullName>
    <label>Favorite Color</label>
    <type>TextArea</type>
</CustomField>