force-app/main/default/objects/Sailor__c/fields/Last_4_of_SSN__c.field-meta.xml
<CustomField>
    <fullName>Last_4_of_SSN__c</fullName>
    <inlineHelpText>Last four digits of the sailor&#39;s social security number. Used for identification/deduplication.</inlineHelpText>
    <label>Last 4 of SSN</label>
    <length>4</length>
    <type>Text</type>
</CustomField>