force-app/main/default/objects/Sailor__c/fields/Lookup_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Lookup_to_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Optional. If this sailor is also included in the database as a Contact, link to that record here.</inlineHelpText>
    <label>Lookup to Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sailor Record</relationshipLabel>
    <relationshipName>Sailors</relationshipName>
    <type>Lookup</type>
</CustomField>