force-app/main/default/objects/Sailor__c/fields/PRD__c.field-meta.xml
<CustomField>
    <fullName>PRD__c</fullName>
    <inlineHelpText>Projected Rotation Date</inlineHelpText>
    <label>PRD</label>
    <type>Date</type>
</CustomField>