force-app/main/default/objects/Sailor__c/fields/Rank_Rate__c.field-meta.xml
<CustomField>
    <fullName>Rank_Rate__c</fullName>
    <label>Rank/Rate</label>
    <length>50</length>
    <type>Text</type>
</CustomField>