force-app/main/default/objects/Sailor__c/fields/Ship_Email__c.field-meta.xml
<CustomField>
    <fullName>Ship_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Ship Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>