force-app/main/default/objects/Sailor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Rank_Rate__c</columns>
    <columns>Department__c</columns>
    <columns>Ship_Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>